--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -232,10 +232,13 @@ font-size: 15px;
    text-align:center;
 }
 .subcrimeform input{
+    border: none;
     padding: 10px;
     border-radius: 1px;
     margin: 10px;
-
+    outline: none;
+    border-radius: 5px;
+    outline: nonene;
 }
 .subcrimeform{
     /* text-align:center; */
@@ -244,9 +247,13 @@ font-size: 15px;
     /* margin-left: 10px; */
 }
 .messageInput{
+    outline: none;
     margin-top: 27px;
     width: 300px;
+    border-radius: 4px;
+    border: none;
     padding: 10px;
+    border:noene;
     margin: 10px;
 }
 .subcrimeform input:focus,textarea{
@@ -256,8 +263,7 @@ font-size: 15px;
     width: 114px;
     position: relative;
     bottom: 40px;
-    /* border-radius: 50%; */
-    /* border: 1px solid red; */
+   
     border-radius: 1px solid red;
     /* padding: 5px; */
     background:black;
@@ -266,12 +272,25 @@ font-size: 15px;
 }
 .textBox{
     background: #604f4f2b;
-    padding: 14px;
+    padding: 15px;
+    border-radius: 21px;
+    font-style: italic;
     display: flex;
-    justify-content: space-between;
 }
 
-
+.qutionText{
+    
+    text-align: start;
+    margin-left: -30px;
+}
+.qutionTextMiddle{
+    padding-bottom: 96px;
+    margin-left: -28px;
+    color:white;
+    font-size:16px; 
+    font-family:sans-serif;
+    
+}
 
 
 
